# IFS06-DV

./: .gitignore  PREGUNTAS_MECANICAS  PREGUNTAS_MECANICA_v2.ipynb  README.md  readme.md  settings.json  setup_fsds.sh
Paquetes_Ros2/: bechmark-slam-data.txt  ekf.yaml  full_pipeline.py  launch_pipeline.py  launch_pipeline.sh  readme.md  rviz_isc_config_v1.rviz  rviz_isc_config_v2.rviz  settings.json  setup.sh
Paquetes_Ros2/coche_urdf/: package.xml  setup.cfg  setup.py
Paquetes_Ros2/coche_urdf/coche_urdf/: coche_urdf.py
Paquetes_Ros2/coche_urdf/launch/: coche_urdf.launch.py  robot_description.launch.py
Paquetes_Ros2/coche_urdf/meshes/: fl_wheel_06.dae  fr_wheel_06.dae  fr_x.dae  rl_wheel_06.dae  rr_wheel_06.dae
Paquetes_Ros2/coche_urdf/urdf/: dfghjkfghj  ifs06.urdf.xacro  qev-3d.urdf.xacro  sensors.urdf.xacro  vehicle.urdf.xacro
Paquetes_Ros2/control/: package.xml  setup.py
Paquetes_Ros2/ekf_node/: package.xml  setup.cfg  setup.py
Paquetes_Ros2/ekf_pkg/: CMakeLists.txt  package.xml
Paquetes_Ros2/odometria/: package.xml  setup.cfg  setup.py
Paquetes_Ros2/path_planning/: package.xml  setup.py
Paquetes_Ros2/puente_ros/: mapper_params_online_async.yaml  package.xml  puente_ros.py  readme.md  setup.cfg  setup.py
Paquetes_Ros2/robot_localization/: package.xml  setup.cfg
Paquetes_Ros2/robot_localization_test/: package.xml  (+1 more)
instalacion_simulador/: README.md  ejecutar_sim.sh  simulador.sh
llama for rules/: llama_questions.py  question.txt  readme.md  requirements.txt
ransac/: cone_detection.py  ground_removal.py  ransac.py
yolo_model/: yolo_model.py
(+219 files in other folders)
